# llm-observability-market-research

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ko.md  ROADMAP.md  _config.yml  comparison.md  competitor-detail.md  index.md  pyproject.toml
.github/workflows/: pages.yml  weekly-report.yml
_data/: latest.yml
_includes/: head-custom.html
_layouts/: default.html
data/analyzed/2026-02-25/: analysis.json
data/analyzed/2026-02-26/: analysis.json
data/analyzed/2026-02-27/: analysis.json
data/arize-phoenix/: 2026-02-26.json  2026-02-27.json
data/braintrust/: 2026-02-26.json  2026-02-27.json
data/langfuse/: 2026-02-27.json
data/langsmith/: 2026-02-26.json  2026-02-27.json
data/mlflow/: 2026-02-26.json  2026-02-27.json
data/wandb-weave/: 2026-02-27.json
ja/: comparison.md  competitor-detail.md  index.md
ja/reports/: 2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-16.md  2026-02-23.md  2026-02-25.md  2026-02-26.md  2026-02-27.md
ko/: comparison.md  competitor-detail.md  index.md
ko/reports/: 2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-16.md  2026-02-23.md  2026-02-25.md  2026-02-26.md  2026-02-27.md
reports/: 2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-16.md  2026-02-23.md  2026-02-25.md  2026-02-26.md  2026-02-27.md
scripts/: generate_baseline.py
src/intel_bot/: __main__.py  analyzer.py  cli.py  config.py  crew.py  discovery.py  models.py  notify.py  prompts.py  report.py  storage.py  translator.py  wb_report.py
src/intel_bot/agents/: __init__.py
(+4 files in other folders)
